tests/NormalTests/paczka2/big_fuzzy/22213685.err
Error in line 3: L97wTOmJINc S616 38,4
Error in line 1: i1qvmUPkNb A246 43,0
Error in line 4: L97wTOmJINc A703 74,4
Error in line 14: UuZ A246 5,0
Error in line 23: i1qvmUPkNb A246 32,2
Error in line 18: A703 A246 239,2
Error in line 19: TcTTAj2h S616 125,0
Error in line 38: 6s4jsApJ3YH S616 3,65
Error in line 29: A703 S616 57,1
Error in line 25: i1qvmUPkNb A703 93,3
Error in line 34: TcTTAj2h A703 24,5
Error in line 50: L97wTOmJINc S616 33,6
Error in line 55: A703 A703 36,4
Error in line 58: A703 S616 36,1
Error in line 56: YVca9 A246 84,6
Error in line 65: A703 A703 58,4
Error in line 42: i1qvmUPkNb A246 132,0
Error in line 68: i1qvmUPkNb A703 58,4
Error in line 69: i1qvmUPkNb A246 248,8
Error in line 54: L97wTOmJINc A703 18,9
Error in line 79: 6s4jsApJ3YH S616 145,9
Error in line 84: 6s4jsApJ3YH A703 19,1
Error in line 85: 6s4jsApJ3YH S616 59,2
Error in line 87: UuZ A703 56,2
Error in line 94: TcTTAj2h A246 51,5
Error in line 86: 6s4jsApJ3YH A246 8,4
Error in line 98: TcTTAj2h A703 86,0
Error in line 102: 6s4jsApJ3YH S616 16,8
Error in line 115: TcTTAj2h S616 60,8
Error in line 117: 6s4jsApJ3YH A246 13,3
Error in line 130: i1qvmUPkNb A703 155,44
Error in line 129: TcTTAj2h S616 62,7
Error in line 120: 6s4jsApJ3YH A703 84,7
Error in line 143: UuZ S616 65,6
Error in line 151: 6s4jsApJ3YH S616 -1,6
Error in line 158: A703 S616 34,7
Error in line 162: A703 A703 7,7
Error in line 152: UuZ A246 31,5
Error in line 161: 6s4jsApJ3YH S616 9,5
Error in line 171: A703 A246 303,7
Error in line 159: i1qvmUPkNb A246 406,7
Error in line 174: 6s4jsApJ3YH A246 41,5
Error in line 183: i1qvmUPkNb A246 76,6
Error in line 147: TcTTAj2h A246 79,9
Error in line 204: A703 A246 37,9
Error in line 217: YVca9 A246 20,9
Error in line 218: YVca9 S616 776,5
Error in line 221: YVca9 A703 82,3
Error in line 222: L97wTOmJINc A703 31,1
Error in line 232: UuZ S616 37,5
Error in line 209: A703 A703 37,6
Error in line 239: A703 S616 10,3
Error in line 237: 6s4jsApJ3YH S616 1,7
Error in line 227: i1qvmUPkNb A703 14,6
